Update cards spacing and align stuff correctly

--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -53,12 +53,14 @@ body {
 
   .card-container {
     padding: 8.8vw;
+    margin: 3rem 4.6rem;
+
     .card {
       display: inline-flex;
       flex-direction: column;
       box-shadow: -3px 3px 20px rgba(0, 0, 0, 0.089);
       width: 17rem;
-      margin: 3rem 1.5rem;
+      margin: 0 1rem;
 
       .card_header {
         .character_img {
@@ -97,6 +99,17 @@ body {
 
 @media (max-width: 1368px) {
   .header {
+    nav {
+      padding: 1.5rem;
+      background-color: rgb(247, 247, 247);
+      box-shadow: -3px 3px 20px rgba(0, 0, 0, 0.205);
+      display: flex;
+      flex-direction: row;
+      .nav-logo {
+        margin: 0 0rem;
+        width: 10rem;
+      }
+    }
     section {
       flex-direction: column-reverse !important;
       .left {
